fix(datepicker): overflow hidden

--- a/components/datePicker/DatePicker.module.scss
+++ b/components/datePicker/DatePicker.module.scss
@@ -198,7 +198,6 @@
 	border: 0.0625rem solid #d9d9d9;
 	@include boxShadow;
 	border-radius: 0.25rem;
-	overflow: auto;
 	&.open {
 		@include flex(column, flex-start, stretch);
 		position: absolute;
